Trying table width again

--- a/templates/About.html
+++ b/templates/About.html
@@ -1,33 +1,84 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>Juhas Bazaar - About</title><meta name="description" content="A page to be frugal - sharing attempts to cut costs."><link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora"><link rel="stylesheet" href="assets/css/styles.min.css">
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<link rel="shortcut icon" href="assets/favicon.ico">
-<script data-ad-client="ca-pub-5277128496544207" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8M87V4XPHF"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-8M87V4XPHF');
-</script>
-</head><body>      <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
+<!DOCTYPE html>
+<html>
+   <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+      <title>Juhas Bazaar - About</title>
+      <meta name="description" content="A page to be frugal - sharing attempts to cut costs.">
+      <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
+      <link rel="stylesheet" href="assets/css/styles.min.css">
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <link rel="shortcut icon" href="assets/favicon.ico">
+      <script data-ad-client="ca-pub-5277128496544207" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-8M87V4XPHF"></script>
+      <script>
+         window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+         
+         gtag('config', 'G-8M87V4XPHF');
+      </script>
+   </head>
+   <body>
+      <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
          <div class="container">
             <a class="navbar-brand" href="/">Frugality</a>
             <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"></button>
-        	<div class="collapse navbar-collapse" id="navcol-1">
-            <a class="btn btn-primary ms-auto" role="button" href="/SignUp">Sign Up for Future Updates!</a>
+            <div class="collapse navbar-collapse" id="navcol-1">
+               <a class="btn btn-primary ms-auto" role="button" href="/SignUp">Sign Up for Future Updates!</a>
             </div>
          </div>
-      </nav><!-- Start: Article Clean --><section class="article-clean"><div class="container"><div class="row"><div class="col-lg-10 col-xl-8 offset-lg-1 offset-xl-2"><!-- Start: Intro --><div class="intro"><h1 class="text-center">A Study in Pennies</h1><!-- Start: Date and Author --><p class="text-center"><span class="by">by</span> <a href="#">BrilliantScarcity354</a><span class="date">2021</span></p><!-- End: Date and Author --><img class="img-fluid" src="assets/img/patrick-hendry-cJQneOMJH5w-unsplash.jpg"></div><!-- End: Intro --><!-- Start: Text --><div class="text"><p>What is this for</p><p>Why did I make it</p><h2>What does it do?</h2><p>Quick Recap</p><h2>What comes next?</h2><p>Quick Recap</p></div><!-- End: Text --></div></div></div></section><!-- End: Article Clean --><!-- Start: Footer Basic --><footer class="footer-basic"><!-- Start: Social Icons --><div class="social"></div><!-- End: Social Icons --><!-- Start: Links -->         <ul class="list-inline">
+      </nav>
+      <!-- Start: Article Clean -->
+      <section class="article-clean">
+         <div class="container">
+            <div class="row">
+               <div class="col-lg-10 col-xl-8 offset-lg-1 offset-xl-2">
+                  <!-- Start: Intro -->
+                  <div class="intro">
+                     <h1 class="text-center">A Study in Pennies</h1>
+                     <!-- Start: Date and Author -->
+                     <p class="text-center"><span class="by">by</span> <a href="#">BrilliantScarcity354</a><span class="date">2021</span></p>
+                     <!-- End: Date and Author --><img class="img-fluid" src="assets/img/patrick-hendry-cJQneOMJH5w-unsplash.jpg">
+                  </div>
+                  <!-- End: Intro --><!-- Start: Text -->
+                  <div class="text">
+                     <p>What is this for</p>
+                     <p>Why did I make it</p>
+                     <h2>What does it do?</h2>
+                     <p>Quick Recap</p>
+                     <h2>What comes next?</h2>
+                     <p>Quick Recap</p>
+                  </div>
+                  <!-- End: Text -->
+               </div>
+            </div>
+         </div>
+      </section>
+      <!-- End: Article Clean --><!-- Start: Footer Basic -->
+      <footer class="footer-basic">
+         <!-- Start: Social Icons -->
+         <div class="social"></div>
+         <!-- End: Social Icons --><!-- Start: Links -->         
+         <ul class="list-inline">
             <li class="list-inline-item"><a href="/">Home</a></li>
             <li class="list-inline-item"><a href="/About">About</a></li>
             <li class="list-inline-item"><a href="/FutureProjects">Suggest Future Projects</a></li>
-         </ul><!-- End: Links --><!-- Start: Copyright --><p class="copyright">LetsBeFrugal © 2021</p><!-- End: Copyright --><script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
-<script>
-  kofiWidgetOverlay.draw('manatmethods', {
-    'type': 'floating-chat',
-    'floating-chat.donateButton.text': 'Support Us',
-    'floating-chat.donateButton.background-color': '#5cb85c',
-    'floating-chat.donateButton.text-color': '#fff'
-  });
-</script></footer><!-- End: Footer Basic --><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script><script src="assets/js/smart-forms.min.js"></script></body></html>
+         </ul>
+         <!-- End: Links --><!-- Start: Copyright -->
+         <p class="copyright">LetsBeFrugal © 2021</p>
+         <!-- End: Copyright --><script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+         <script>
+            kofiWidgetOverlay.draw('manatmethods', {
+              'type': 'floating-chat',
+              'floating-chat.donateButton.text': 'Support Us',
+              'floating-chat.donateButton.background-color': '#5cb85c',
+              'floating-chat.donateButton.text-color': '#fff'
+            });
+         </script>
+      </footer>
+      <!-- End: Footer Basic --><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script><script src="assets/js/smart-forms.min.js"></script>
+   </body>
+</html>
