--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,9 @@
   			padding:10px;
   			border-radius:10px;
 			}
+			table {
+			width: 90%;
+			}
       </style>
       <script data-ad-client="ca-pub-5277128496544207" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <!-- Global site tag (gtag.js) - Google Analytics -->
