--- a/templates/FutureProjects.html
+++ b/templates/FutureProjects.html
@@ -1,25 +1,65 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>Juhas Bazaar - Future Projects</title><meta name="description" content="A page to be frugal - sharing attempts to cut costs."><link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora"><link rel="stylesheet" href="assets/css/styles.min.css">
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<link rel="shortcut icon" href="assets/favicon.ico">
-<script data-ad-client="ca-pub-5277128496544207" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8M87V4XPHF"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-8M87V4XPHF');
-</script>
-</head><body>      <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
+<!DOCTYPE html>
+<html>
+   <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+      <title>Juhas Bazaar - Future Projects</title>
+      <meta name="description" content="A page to be frugal - sharing attempts to cut costs.">
+      <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
+      <link rel="stylesheet" href="assets/css/styles.min.css">
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <link rel="shortcut icon" href="assets/favicon.ico">
+      <script data-ad-client="ca-pub-5277128496544207" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-8M87V4XPHF"></script>
+      <script>
+         window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+         
+         gtag('config', 'G-8M87V4XPHF');
+      </script>
+   </head>
+   <body>
+      <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
          <div class="container">
             <a class="navbar-brand" href="/">Juhas Bazaar</a>
             <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"></button>
-        	<div class="collapse navbar-collapse" id="navcol-1">
-            <a class="btn btn-primary ms-auto" role="button" href="/">Take Me Back Home!</a>
+            <div class="collapse navbar-collapse" id="navcol-1">
+               <a class="btn btn-primary ms-auto" role="button" href="/">Take Me Back Home!</a>
             </div>
          </div>
-      </nav><!-- Start: Contact Form Clean --><section class="contact-clean"><form data-bss-recipient="b59cae5d4e4be953edbc0f78eeaad7e1"><h2 class="text-center">Suggest Future Projects</h2><!-- Start: Success Example --><div class="mb-3"><input class="form-control" type="text" name="name" placeholder="Name"></div><!-- End: Success Example --><!-- Start: Error Example --><div class="mb-3"><input class="form-control is-invalid" type="email" name="email" placeholder="Email"><!-- Start: The Error Message --><small class="form-text text-danger">Please enter a correct email address.</small><!-- End: The Error Message --></div><!-- End: Error Example --><div class="mb-3"><textarea class="form-control" name="message" placeholder="Message" rows="14"></textarea></div><div class="text-center mb-3"><button class="btn btn-primary" type="submit">send </button></div></form></section><!-- End: Contact Form Clean --><!-- Start: Footer Basic --><footer class="footer-basic"><!-- Start: Social Icons --><div class="social"></div><!-- End: Social Icons --><!-- Start: Links -->         <ul class="list-inline">
+      </nav>
+      <!-- Start: Contact Form Clean -->
+      <section class="contact-clean">
+         <form data-bss-recipient="b59cae5d4e4be953edbc0f78eeaad7e1">
+            <h2 class="text-center">Suggest Future Projects</h2>
+            <!-- Start: Success Example -->
+            <div class="mb-3"><input class="form-control" type="text" name="name" placeholder="Name"></div>
+            <!-- End: Success Example --><!-- Start: Error Example -->
+            <div class="mb-3">
+               <input class="form-control is-invalid" type="email" name="email" placeholder="Email"><!-- Start: The Error Message --><small class="form-text text-danger">Please enter a correct email address.</small><!-- End: The Error Message -->
+            </div>
+            <!-- End: Error Example -->
+            <div class="mb-3"><textarea class="form-control" name="message" placeholder="Message" rows="14"></textarea></div>
+            <div class="text-center mb-3"><button class="btn btn-primary" type="submit">send </button></div>
+         </form>
+      </section>
+      <!-- End: Contact Form Clean --><!-- Start: Footer Basic -->
+      <footer class="footer-basic">
+         <!-- Start: Social Icons -->
+         <div class="social"></div>
+         <!-- End: Social Icons --><!-- Start: Links -->         
+         <ul class="list-inline">
             <li class="list-inline-item"><a href="/">Home</a></li>
             <li class="list-inline-item"><a href="/About">About</a></li>
             <li class="list-inline-item"><a href="/FutureProjects">Suggest Future Projects</a></li>
-         </ul><!-- End: Links --><!-- Start: Copyright --><p class="copyright">LetsBeFrugal © 2021</p><!-- End: Copyright --></footer><!-- End: Footer Basic --><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script><script src="assets/js/smart-forms.min.js"></script></body></html>
+         </ul>
+         <!-- End: Links --><!-- Start: Copyright -->
+         <p class="copyright">LetsBeFrugal © 2021</p>
+         <!-- End: Copyright -->
+      </footer>
+      <!-- End: Footer Basic --><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script><script src="assets/js/smart-forms.min.js"></script>
+   </body>
+</html>
