Trying table width again

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,8 @@
   			padding:10px;
   			border-radius:10px;
 			}
-			table {
+		table {
+			table-layout:fixed;
 			width: 90%;
 			}
       </style>
