--- a/templates/About.html
+++ b/templates/About.html
@@ -45,12 +45,15 @@
                   </div>
                   <!-- End: Intro --><!-- Start: Text -->
                   <div class="text">
-                     <p>What is this for</p>
-                     <p>Why did I make it</p>
-                     <h2>What does it do?</h2>
-                     <p>Quick Recap</p>
+                     <h2>What is it?</h2>
+                     <p> This project was a way for me to cut down on the number of times I have to google things. Why? Well, because I felt like it and it was a challenge. I finished with my first approach and decided that it would be fun to open source and create a UI to both learn how to deploy and give a tool to people who do not know how to code!</p>
+                     <h2>Why did I make it?</h2>
+                     <p>I made it to learn as I find that the best way to really improve one's skills - if you want to follow my journey and see more of my projects as i build them, sign up to get updates in the top right corner of this page! Feel free to suggest ideas you'd want to work on together in the Future Projects link at the bottom of this page!</p>
+                     <h2>What does it do? </h2>
+                     <p>Long story short this program grabs sales data from various stores every day and puts them in a table format on this page for you to find your seals!</p>
                      <h2>What comes next?</h2>
-                     <p>Quick Recap</p>
+                     <p> I have moved to automating my subway timing as of now trying to build a discord tool to notify me 5 minutes before I need to walk to my train to get home on time!</p>
+                     <p> I am also working on a tool to tell me what clothes will be most comfortable to wear given the weather - this will entail creating my own dataset and then inferring information from that dataset</p>
                   </div>
                   <!-- End: Text -->
                </div>
