--- a/templates/About.html
+++ b/templates/About.html
@@ -54,6 +54,10 @@
                      <h2>What comes next?</h2>
                      <p> I have moved to automating my subway timing as of now trying to build a discord tool to notify me 5 minutes before I need to walk to my train to get home on time!</p>
                      <p> I am also working on a tool to tell me what clothes will be most comfortable to wear given the weather - this will entail creating my own dataset and then inferring information from that dataset</p>
+                  	<br>
+                  	<br>
+                  	<h2>What is "Juha"?</h2>
+                  	<p> Juha is a character in middle eastern folk lore known for his craftiness and resourcefulness, he has many encounters that leave the listener both scratching their head and nodding in approval - for this reason I thought that Juha would appreciate the approach to grocery shopping enabled here<p>
                   </div>
                   <!-- End: Text -->
                </div>
