Future features to future projects

--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -37,7 +37,7 @@
          <div class="container">
             <div class="row">
                <div class="col-xl-9 mx-auto position-relative">
-                  <h1 class="mb-5">Get Updates <br> on <br> New Features.</h1>
+                  <h1 class="mb-5">Get Updates <br> on <br> New Projects.</h1>
                </div>
                <div class="col-md-10 col-lg-8 col-xl-7 mx-auto position-relative">
                   <form form action="" method="POST">
