--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -25,10 +25,10 @@
    <body>
            <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
          <div class="container">
-            <a class="navbar-brand" href="/">Juhas Bazaar</a>
+            <a class="navbar-brand">BrilliantScarcity354</a>
             <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"></button>
         	<div class="collapse navbar-collapse" id="navcol-1">
-            <a class="btn btn-primary ms-auto" role="button" href="/">Take Me Back Home!</a>
+            <a class="btn btn-primary ms-auto" role="button" href="/">Explore a previous project!</a>
             </div>
          </div>
       </nav>
@@ -37,7 +37,8 @@
          <div class="container">
             <div class="row">
                <div class="col-xl-9 mx-auto position-relative">
-                  <h1 class="mb-5">Get Updates <br> on <br> New Projects.</h1>
+                  <h1 class="mb-5">Subscribe for our Newsletter</h1>
+                  <p class="text-center">Learn to webscrape and visualize with weekly walkthroughs of my eccentric problem-solving projects!</p>
                </div>
                <div class="col-md-10 col-lg-8 col-xl-7 mx-auto position-relative">
                   <form form action="" method="POST">
@@ -55,12 +56,8 @@
          <div class="social"></div>
          <!-- End: Social Icons --><!-- Start: Links -->
          <ul class="list-inline">
-            <li class="list-inline-item"><a href="/">Home</a></li>
-            <li class="list-inline-item"><a href="/About">About</a></li>
-            <li class="list-inline-item"><a href="/FutureProjects">Future Project Suggestions</a></li>
          </ul>
          <!-- End: Links --><!-- Start: Copyright -->
-         <p class="copyright">LetsBeFrugal © 2021</p>
          <!-- End: Copyright -->
       </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script><script src="/assets/js/script.min.js?h=a2cee23efd5962953aee193ace61225c"></script>
