--- a/templates/SignUpSaved.html
+++ b/templates/SignUpSaved.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
-<html style="font-family: Arapey, serif;">
+<html>
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-      <title>Sign Up Complete- Juhas Bazaar</title>
-      <meta name="description" content="One poker tool to rule the others. A machine learning approach to dynamic decision making in poker.">
-      <link rel="icon" type="image/jpeg" sizes="1024x819" href="/assets/img/amol-tyagi-7dkLbNE6ycI-unsplash.jpg?h=e1d53b2604a7a851d69469aff2fde3a5">
-      <link rel="icon" type="image/jpeg" sizes="1024x819" href="/assets/img/amol-tyagi-7dkLbNE6ycI-unsplash.jpg?h=e1d53b2604a7a851d69469aff2fde3a5">
-      <link rel="icon" type="image/jpeg" sizes="1024x819" href="/assets/img/amol-tyagi-7dkLbNE6ycI-unsplash.jpg?h=e1d53b2604a7a851d69469aff2fde3a5">
-      <link rel="icon" type="image/jpeg" sizes="1024x819" href="/assets/img/amol-tyagi-7dkLbNE6ycI-unsplash.jpg?h=e1d53b2604a7a851d69469aff2fde3a5">
-      <link rel="icon" type="image/jpeg" sizes="1024x819" href="/assets/img/amol-tyagi-7dkLbNE6ycI-unsplash.jpg?h=e1d53b2604a7a851d69469aff2fde3a5">
+      <title>Sign Up - Juhas Bazaar</title>
+      <meta name="description" content="A place to find sales at various grocery stores outlets around the world.">
       <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
       <link rel="stylesheet" href="assets/css/styles.min.css">
       <link rel="stylesheet" href="assets/css/wff.css">
       <link rel="shortcut icon" href="assets/favicon.ico">
-      <script data-ad-client="ca-pub-5277128496544207" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script data-ad-client="ca-pub-5277128496544207" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8M87V4XPHF"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -26,9 +21,9 @@
 
   gtag('config', 'G-8M87V4XPHF');
 </script>
-       </head>
+      </head>
    <body>
-    <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
+           <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
          <div class="container">
             <a class="navbar-brand">BrilliantScarcity354</a>
             <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"></button>
@@ -42,7 +37,16 @@
          <div class="container">
             <div class="row">
                <div class="col-xl-9 mx-auto position-relative">
-                  <h1 class="mb-5">Thank you for your interest, there are currently {{ waiting }} others subscribed! <br> We will be in touch!</h1>
+                  <h1 class="mb-5">Subscribe for our Newsletter</h1>
+                  <p class="text-center">Learn to webscrape and visualize with weekly walkthroughs of my eccentric problem-solving projects!</p>
+               </div>
+               <div class="col-md-10 col-lg-8 col-xl-7 mx-auto position-relative">
+                  <form form action="" method="POST">
+                     <div class="row">
+                        <div class="col-12 col-md-9 mb-2 mb-md-0"><input class="form-control form-control-lg" name ="Email" type="email" placeholder="Enter your email..."></div>
+                        <div class="col-12 col-md-3"><button class="btn btn-primary btn-lg" type="submit">Sign up!</button></div>
+                     </div>
+                  </form>
                </div>
             </div>
          </div>
@@ -52,8 +56,12 @@
          <div class="social"></div>
          <!-- End: Social Icons --><!-- Start: Links -->
          <ul class="list-inline">
+            <li class="list-inline-item"><a href="/">Home</a></li>
+            <li class="list-inline-item"><a href="/About">About</a></li>
+            <li class="list-inline-item"><a href="/FutureProjects">Future Project Suggestions</a></li>
          </ul>
          <!-- End: Links --><!-- Start: Copyright -->
+         <p class="copyright">LetsBeFrugal © 2021</p>
          <!-- End: Copyright -->
       </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script><script src="/assets/js/script.min.js?h=a2cee23efd5962953aee193ace61225c"></script>
