--- a/templates/SignUpThankYouSaved.html
+++ b/templates/SignUpThankYouSaved.html
@@ -28,13 +28,10 @@
 </script>
        </head>
    <body>
-    <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
+      <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
          <div class="container">
-            <a class="navbar-brand">BrilliantScarcity354</a>
-            <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"></button>
-        	<div class="collapse navbar-collapse" id="navcol-1">
-            <a class="btn btn-primary ms-auto" role="button" href="/">Explore a previous project!</a>
-            </div>
+            <a class="navbar-brand" href="#">Juhas Bazaar</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"></button>
+            <div class="collapse navbar-collapse" id="navcol-1"><a class="btn btn-primary ms-auto" role="button" href="#">Sign Up!</a></div>
          </div>
       </nav>
       <header class="text-center text-white masthead" style="background: url(&quot;assets/img/martins-cardoso-7xyvDUTcKvM-unsplash.jpg&quot;);" margin-bottom: 15px>
@@ -42,7 +39,7 @@
          <div class="container">
             <div class="row">
                <div class="col-xl-9 mx-auto position-relative">
-                  <h1 class="mb-5">Thank you for your interest, there are currently {{ waiting }} others subscribed! <br> We will be in touch!</h1>
+                  <h1 class="mb-5">Thank you for your interest, there are currently {{ waiting }} others waiting! <br> We will be in touch!</h1>
                </div>
             </div>
          </div>
@@ -52,8 +49,12 @@
          <div class="social"></div>
          <!-- End: Social Icons --><!-- Start: Links -->
          <ul class="list-inline">
+            <li class="list-inline-item"><a href="/">Home</a></li>
+            <li class="list-inline-item"><a href="/About">About</a></li>
+            <li class="list-inline-item"><a href="/SignUp">Suggest Future Projects</a></li>
          </ul>
          <!-- End: Links --><!-- Start: Copyright -->
+         <p class="copyright">LetsBeFrugal © 2021</p>
          <!-- End: Copyright -->
       </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script><script src="/assets/js/script.min.js?h=a2cee23efd5962953aee193ace61225c"></script>
