--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -43,8 +43,7 @@
                <div class="col-md-10 col-lg-8 col-xl-7 mx-auto position-relative">
                   <form form action="" method="POST">
                      <div class="row">
-                        <div class="col-12 col-md-9 mb-2 mb-md-0"><input class="form-control form-control-lg" name ="Email" type="email" placeholder="Enter your email..."></div>
-                        <div class="col-12 col-md-3"><button class="btn btn-primary btn-lg" type="submit">Sign up!</button></div>
+                     <iframe src="https://brilliantscarcity.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
                      </div>
                   </form>
                </div>
