--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -37,19 +37,19 @@
          <div class="container">
             <div class="row">
                <div class="col-xl-9 mx-auto position-relative">
-                  <h1 class="mb-5">Subscribe for our Newsletter</h1>
-                  <p class="text-center">Learn to webscrape and visualize with weekly walkthroughs of my eccentric problem-solving projects!</p>
+                  <h1 class="mb-5">Sign Up for Updates</h1>
+                  <p class="text-center">Get weekly deals delivered right to your inbox!</p>
                </div>
                <div class="col-md-10 col-lg-8 col-xl-7 mx-auto position-relative">
                   <form form action="" method="POST">
                      <div class="row">
-                     <iframe src="https://brilliantscarcity.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
+                        <div class="col-12 col-md-9 mb-2 mb-md-0"><input class="form-control form-control-lg" name ="Email" type="email" placeholder="Enter your email..."></div>
+                        <div class="col-12 col-md-3"><button class="btn btn-primary btn-lg" type="submit">Sign up!</button></div>
                      </div>
                   </form>
                </div>
             </div>
          </div>
-      </header>
             <footer class="footer-basic">
          <!-- Start: Social Icons -->
          <div class="social"></div>
