--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -25,10 +25,10 @@
    <body>
            <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
          <div class="container">
-            <a class="navbar-brand">BrilliantScarcity354</a>
+            <a class="navbar-brand">Juhas Bazaar</a>
             <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"></button>
         	<div class="collapse navbar-collapse" id="navcol-1">
-            <a class="btn btn-primary ms-auto" role="button" href="/">Explore a previous project!</a>
+            <a class="btn btn-primary ms-auto" role="button" href="/">Explore the Bazaar!</a>
             </div>
          </div>
       </nav>
@@ -48,7 +48,9 @@
                      </div>
                   </form>
                </div>
+               </div>
          </div>
+      </header>         
             <footer class="footer-basic">
          <!-- Start: Social Icons -->
          <div class="social"></div>
